<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/std_margin"
    android:id="@+id/card_cv">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Test text"
        android:id="@+id/name_tv"
        style="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:textAllCaps="true"
        android:padding="@dimen/std_margin"
        android:background="?android:attr/selectableItemBackground"/>

    <ImageView
        android:id="@+id/is_favorite_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_filled"
        android:layout_gravity="end|center_vertical"
        android:paddingEnd="@dimen/std_margin"
        android:contentDescription="@string/heart_description"/>

</android.support.v7.widget.CardView>
